backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fmp
  labels:
    app.kubernetes.io/part-of: fmp-68
